@@ -3,6 +3,7 @@ package datadog.crashtracking;
 import static datadog.crashtracking.CrashUploader.HEADER_DD_EVP_SUBDOMAIN;
 import static datadog.crashtracking.CrashUploader.HEADER_DD_TELEMETRY_API_VERSION;
 import static datadog.crashtracking.CrashUploader.TELEMETRY_API_VERSION;
+import static net.javacrumbs.jsonunit.assertj.JsonAssertions.assertThatJson;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
@@ -140,7 +141,7 @@ public class CrashUploaderTest {
   @Test
   public void testTelemetryCrashPing() throws Exception {
     // Given
-    final String expected = readFileAsString("golden/telemetry/sample-ping-for-telemetry.txt");
+    final String expected = readFileAsString("golden/telemetry/sample-ping-for-telemetry.json");
     ConfigManager.StoredConfig crashConfig =
         new ConfigManager.StoredConfig.Builder(config)
             .reportUUID(SAMPLE_UUID)
@@ -176,7 +177,9 @@ public class CrashUploaderTest {
     assertTrue(tags.contains("runtime_version:"));
     assertTrue(tags.contains("runtime_vendor:"));
     assertTrue(tags.contains("runtime_name:"));
-    assertEquals(expected, event.get("payload").get(0).get("message").asText());
+    assertEquals(
+        mapper.readTree(expected),
+        mapper.readTree(event.get("payload").get(0).get("message").asText()));
     assertCommonPayload(event);
   }
 
@@ -185,7 +188,7 @@ public class CrashUploaderTest {
     // Given
     final ObjectMapper mapper = new ObjectMapper();
     final Map<String, ?> expected =
-        mapper.readValue(readFileAsString("golden/errortracking/sample-ping.txt"), Map.class);
+        mapper.readValue(readFileAsString("golden/errortracking/sample-ping.json"), Map.class);
     // remove ddtags and osinfo if present from the expected (they will be checked apart)
     expected.remove("ddtags");
     expected.remove("os_info");
@@ -251,14 +254,15 @@ public class CrashUploaderTest {
   @ParameterizedTest
   @ValueSource(
       strings = {
-        "sample-crash-for-telemetry.txt",
-        "sample-crash-for-telemetry-2.txt",
-        "sample-crash-for-telemetry-3.txt",
-        "sample_oom.txt"
+        "sample-crash-for-telemetry.json",
+        "sample-crash-for-telemetry-2.json",
+        "sample-crash-for-telemetry-3.json",
+        "sample_oom.json"
       })
   public void testTelemetryHappyPath(String log) throws Exception {
     // Given
     CrashLog expected = CrashLog.fromJson(readFileAsString("golden/telemetry/" + log));
+    final String inputLog = log.replace(".json", ".txt");
     ConfigManager.StoredConfig crashConfig =
         new ConfigManager.StoredConfig.Builder(config)
             .reportUUID(SAMPLE_UUID)
@@ -268,7 +272,7 @@ public class CrashUploaderTest {
     // When
     uploader = new CrashUploader(config, crashConfig);
     server.enqueue(new MockResponse().setResponseCode(200));
-    uploader.upload(getResourcePath(log));
+    uploader.upload(getResourcePath(inputLog));
 
     final RecordedRequest recordedRequest = server.takeRequest(5, TimeUnit.SECONDS);
 
@@ -289,9 +293,9 @@ public class CrashUploaderTest {
     String message = event.get("payload").get(0).get("message").asText();
     CrashLog extracted = CrashLog.fromJson(message);
 
-    assertTrue(
-        expected.equalsForTest(extracted),
-        () -> "Expected: " + expected.toJson() + "\nbut got: " + extracted.toJson());
+    assertThatJson(extracted.toJson())
+        .whenIgnoringPaths("os_info", "metadata", "experimental")
+        .isEqualTo(expected.toJson());
     assertEquals("severity:crash", event.get("payload").get(0).get("tags").asText());
     assertCommonPayload(event);
   }
@@ -299,10 +303,10 @@ public class CrashUploaderTest {
   @ParameterizedTest
   @ValueSource(
       strings = {
-        "sample-crash-for-telemetry.txt",
-        "sample-crash-for-telemetry-2.txt",
-        "sample-crash-for-telemetry-3.txt",
-        "sample_oom.txt"
+        "sample-crash-for-telemetry.json",
+        "sample-crash-for-telemetry-2.json",
+        "sample-crash-for-telemetry-3.json",
+        "sample_oom.json"
       })
   public void testErrorTrackingHappyPath(String log) throws Exception {
     // Given
@@ -312,6 +316,7 @@ public class CrashUploaderTest {
     // remove ddtags and osinfo if present from the expected (they will be checked apart)
     expected.remove("ddtags");
     expected.remove("os_info");
+    final String inputLog = log.replace(".json", ".txt");
     ConfigManager.StoredConfig crashConfig =
         new ConfigManager.StoredConfig.Builder(config)
             .reportUUID(SAMPLE_UUID)
@@ -322,7 +327,7 @@ public class CrashUploaderTest {
     // When
     uploader = new CrashUploader(config, crashConfig);
     server.enqueue(new MockResponse().setResponseCode(200));
-    uploader.remoteUpload(readFileAsString(log), false, true);
+    uploader.remoteUpload(readFileAsString(inputLog), false, true);
 
     final RecordedRequest recordedRequest = server.takeRequest(5, TimeUnit.SECONDS);
 
@@ -352,19 +357,39 @@ public class CrashUploaderTest {
     assertTrue(ddtags.contains("runtime_name:"));
 
     // assert platform independent equality
-    assertEquals(
-        expected,
-        extracted,
-        () -> {
-          try {
-            return "Expected: "
-                + mapper.writeValueAsString(expected)
-                + "\nbut got: "
-                + mapper.writeValueAsString(extracted);
-          } catch (JsonProcessingException e) {
-            throw new RuntimeException(e);
-          }
-        });
+    assertThatJson(mapper.writeValueAsString(extracted))
+        .whenIgnoringPaths("experimental")
+        .isEqualTo(mapper.writeValueAsString(expected));
+  }
+
+  @Test
+  public void testErrorTrackingSerializesRuntimeArgs() throws Exception {
+    ConfigManager.StoredConfig crashConfig =
+        new ConfigManager.StoredConfig.Builder(config)
+            .reportUUID(SAMPLE_UUID)
+            .processTags("a:b")
+            .runtimeId("1234")
+            .tags(ConfigManager.getMergedTagsForSerialization(Config.get()))
+            .build();
+
+    uploader = new CrashUploader(config, crashConfig);
+    server.enqueue(new MockResponse().setResponseCode(200));
+    uploader.remoteUpload(readFileAsString("sample-crash-macos-aarch64.txt"), false, true);
+
+    final RecordedRequest recordedRequest = server.takeRequest(5, TimeUnit.SECONDS);
+    final ObjectMapper mapper = new ObjectMapper();
+    final JsonNode event = mapper.readTree(recordedRequest.getBody().readUtf8());
+
+    final JsonNode runtimeArgs = event.at("/experimental/runtime_args");
+    assertTrue(runtimeArgs.isArray());
+    boolean found = false;
+    for (JsonNode runtimeArg : runtimeArgs) {
+      if ("--enable-native-access=ALL-UNNAMED".equals(runtimeArg.asText())) {
+        found = true;
+        break;
+      }
+    }
+    assertTrue(found);
   }
 
   private void assertCommonHeader(JsonNode event) {
